--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <section>
             <h2>Bienvenidos a Bones</h2>
             <p>La mejor ropa urbana con el estilo más innovador.</p>
-            <img src="img/bones-banner.jpg" alt="Moda urbana Bones">
+            <img src="img/bones-banner.jpg" alt="Moda Bones">
         </section>
     </main>
     
