--- a/pages/blog.html
+++ b/pages/blog.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Bones - Blog de tendencias y moda urbana">
-    <meta name="keywords" content="ropa, moda, urbana, estilo, Bones, blog, tendencias">
+    <meta name="description" content="Bones - Blog de tendencias y moda ">
+    <meta name="keywords" content="ropa, moda, alta costura, estilo, Bones, blog, tendencias">
     <meta name="author" content="Bones">
     <title>Blog - Bones</title>
     <link rel="stylesheet" href="../css/main.css">
