--- a/pages/productos.html
+++ b/pages/productos.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Bones - Nuestra colección de moda urbana">
-    <meta name="keywords" content="ropa, moda, urbana, estilo, Bones, productos">
+    <meta name="description" content="Bones - Nuestra colección de moda">
+    <meta name="keywords" content="ropa, moda, alta costura, estilo, Bones, productos">
     <meta name="author" content="Bones">
     <title>Productos - Bones</title>
     <link rel="stylesheet" href="../css/main.css">
