--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Contacto - Bones Moda Urbana">
-    <meta name="keywords" content="contacto, moda, urbana, Bones">
+    <meta name="description" content="Contacto - Bones Moda">
+    <meta name="keywords" content="contacto, moda, alta costura, Bones">
     <meta name="author" content="Bones">
     <title>Contacto | Bones</title>
     <link rel="stylesheet" href="../css/main.css">
