--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Bones - Nuestra historia y misión">
-    <meta name="keywords" content="ropa, moda, urbana, estilo, Bones, historia, nosotros">
+    <meta name="keywords" content="ropa, moda, alta costura, estilo, Bones, historia, nosotros">
     <meta name="author" content="Bones">
     <title>Nosotros - Bones</title>
     <link rel="stylesheet" href="../css/main.css">
