--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Bones - Moda urbana y vanguardista">
+    <meta name="description" content="Bones - Moda Alta Costura">
     <meta name="keywords" content="traje, moda, alta costura , estilo, Bones">
     <meta name="author" content="Bones">
     <title>Bones - Alta costura</title>
