--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <main>
         <section>
             <h2>Bienvenidos a Bones</h2>
-            <p>La mejor ropa urbana con el estilo más innovador.</p>
+            <p>Alta costura con el estilo más innovador.</p>
             <img src="img/bones-banner.jpg" alt="Moda Bones">
         </section>
     </main>
