--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Bones - Moda Alta Costura">
+    <meta name="description" content="Bones - Alta Costura">
     <meta name="keywords" content="traje, moda, alta costura , estilo, Bones">
     <meta name="author" content="Bones">
     <title>Bones - Alta costura</title>
@@ -56,6 +56,9 @@
     <footer>
         <p>&copy; 2025 Bones - Todos los derechos reservados</p>
     </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-..." crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js" integrity="sha384-..." crossorigin="anonymous"></script>
     
 </body>
 </html>
