--- a/pages/blog.html
+++ b/pages/blog.html
@@ -64,6 +64,10 @@
     <footer>
         <p>&copy; 2025 Bones - Todos los derechos reservados</p>
     </footer>
+
+
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-..." crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js" integrity="sha384-..." crossorigin="anonymous"></script>
     
 </body>
 </html>
