--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -71,6 +71,8 @@
         <p>&copy; 2025 Bones - Todos los derechos reservados</p>
     </footer>
 
-    <script src="js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-..." crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js" integrity="sha384-..." crossorigin="anonymous"></script>
+    
 </body>
 </html>
